# codi

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: build.yml
codi-bin/: Cargo.toml
codi-bin/src/: args.rs  lib.rs  main.rs
codi-bin/tests/: integration.rs
codi-bin/tests/test/: cli_usage.rs
codi-core/: Cargo.toml  build.rs
codi-core/src/: color_dist.rs  color_space.rs  html_color.rs  lib.rs  math_utils.rs
contrib/: html-color-names.txt
libcodi/: Cargo.toml
libcodi/src/: color_dist.rs  color_space.rs  html_color.rs  lib.rs  math_utils.rs
nix/: check.nix  flake.nix
src/: args.rs  color_dist.rs  color_space.rs  html_color.rs  lib.rs  main.rs
tests/: Cargo.toml  build.rs
tests/cli_usage/: mod.rs  template.txt  test_cases.ron  test_cases.ron.rs
tests/integration/: cli_usage.rs  main.rs
