[workspace]
members = [
  "libcodi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
description = "Color perception difference algorithms and utilities."
edition = "2021"
categories = ["graphics", "algorithms"]
repository = "https://github.com/woojiq/codi"
keywords = ["color", "html", "closest-color", "perceptual-uniform"]
license-file = "LICENSE"
readme = "README.md"

[workspace.lints.clippy]
all = { level = "warn", priority = -2 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

must_use_candidate = "allow"
suboptimal_flops = "allow"

[package]
name = "codi-bin"
version.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true
keywords.workspace = true
license-file.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
codi = { path = "libcodi" }
colored = "2.1.0"
lexopt = "0.3.0"

[[bin]]
name = "codi"
path = "src/main.rs"
