[package]
name = "codi-bin"
version.workspace = true
description.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
codi-core = { path = "../codi-core" }
lexopt = "0.3.0"
tabled = { version = "0.17.0", default-features = false, features = ["std", "ansi"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"

[[bin]]
name = "codi"
path = "src/main.rs"
