[package]
name = "codi-core"
version.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true
keywords.workspace = true
license-file.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
libm = "0.2.11"
ordered-float = { version = "4.5.0", default-features = false }

[features]
default = ["std"]
std = []

[lints]
workspace = true
